add link to offline page

--- a/public/offline.html
+++ b/public/offline.html
@@ -3,5 +3,6 @@
   <body>
     <h1>Offline</h1>
     <p>Internet connection is unavailable.</p>
+    <a href="/saved">Go to saved data</a>
   </body>
 </html>
